# yew-component-size

./: Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
